--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -10,6 +10,8 @@ $color-3: #426b69;
 body {font-family: $text-font; margin: 0;padding: 0; color: $color-dark; font-size: 16px;}
 h1, h2, h3, h4 {font-family: $headline-font; font-weight: 600; color: $color-dark;margin-top:0.25em;margin-bottom: 0.25em;}
 
+header {margin: 0 5.5rem; padding: 1rem; border-bottom: 1px dotted $color-dark;}
+
 .active {color: $color-3;}
 
 .page-container {
